test/scc_test/stmt/semantic-errors/008.t
void test()
{
    if (1)
        default:
            ;
}